# e-hentai-dump

./: .gitattributes  .gitignore  Cargo.toml  README.md  append.py  build_item_index.py  disowned  item_index_format.md  replace.py
.github/workflows/: generate-data.yml
crates/db-creator/: Cargo.toml
crates/db-creator/src/: arena.rs  data.rs  main.rs  parser.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: main.rs
data/: 3731743.json  3731744.json  3731745.json  3731746.json  3731748.json  3731749.json  3731750.json  3731751.json  3731752.json  3731753.json  3731754.json  3731755.json  3731756.json  3731757.json  3731758.json  3731759.json  3731760.json  3731761.json  3731762.json  3731763.json  3731764.json  3731765.json  3731766.json  3731767.json  3731768.json  3731769.json  3731770.json  3731771.json  3731772.json  3731773.json  3731774.json  3731775.json  3731776.json  3731777.json  3731778.json  3731779.json  3731780.json  3731781.json  3731782.json  3731783.json  (+27354 more)
detail/: 3731743.json  3731744.json  3731745.json  3731746.json  3731748.json  3731749.json  3731750.json  3731751.json  3731752.json  3731753.json  3731754.json  3731755.json  3731756.json  3731757.json  3731758.json  3731759.json  3731760.json  3731761.json  3731762.json  3731763.json  3731764.json  3731765.json  3731766.json  3731767.json  3731768.json  3731769.json  3731770.json  3731771.json  3731772.json  3731773.json  3731774.json  3731775.json  3731776.json  3731777.json  3731778.json  3731779.json  3731780.json  3731781.json  3731782.json  3731783.json  (+27354 more)
src/: main.rs
