[package]
name = "ehg"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.1", features = ["json"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scraper = "0.25.0"
chrono = "0.4.42"
