[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["json"] }
quick-xml = { workspace = true, features = ["serialize"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
scraper.workspace = true
chrono.workspace = true
